...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/save_icon" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/playandstop"
                android:layout_width="37dp"
                android:layout_height="37dp"
                android:layout_marginStart="117dp"
                android:layout_marginTop="54dp"
                android:layout_marginEnd="117dp"
                android:layout_gravity="center_horizontal"
...
